<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LinearFragment">

    <TextView
        android:id="@+id/first_tv"
        android:text="@string/first"
        style="@style/Desc"
        android:layout_margin="@dimen/bottom_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/second_tv"
        android:text="@string/second"
        style="@style/Desc"
        android:layout_margin="@dimen/bottom_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/third_tv"
        android:text="@string/third"
        style="@style/Desc"
        android:layout_margin="@dimen/bottom_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>