<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConstraintFragment">

    <ImageView
        android:id="@+id/profile_img"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_baseline_account_box_24"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/profile_image" />

    <TextView
        android:id="@+id/nickname_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/nickname"
        style="@style/SubTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/profile_img"
        app:layout_constraintTop_toTopOf="@+id/profile_img" />

    <TextView
        android:id="@+id/full_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/full_name"
        app:layout_constraintEnd_toEndOf="@+id/nickname_tv"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/nickname_tv"
        app:layout_constraintTop_toBottomOf="@+id/nickname_tv" />

    <TextView
        android:id="@+id/desc_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"

        android:text="@string/lorem_ipsum"
        app:layout_constraintEnd_toEndOf="@+id/full_name"
        app:layout_constraintStart_toStartOf="@+id/profile_img"
        app:layout_constraintTop_toBottomOf="@+id/profile_img" />

</androidx.constraintlayout.widget.ConstraintLayout>